updated working state

--- a/Pika/Base.lproj/Main.storyboard
+++ b/Pika/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,28 +18,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ZSx-zV-YJV">
-                                <rect key="frame" x="0.0" y="20" width="375" height="314"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ZSx-zV-YJV">
+                                <rect key="frame" x="0.0" y="20" width="375" height="557"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ik-CG-XXD">
-                                <rect key="frame" x="164" y="442" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRv-K6-u2r">
+                                <rect key="frame" x="20" y="597" width="335" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="3FO-Xe-tlw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="25"/>
+                                <state key="normal" title="GO!">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
-                                    <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3sD-Ck-RS9"/>
+                                    <action selector="checkLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5kF-nT-c5h"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azM-fb-Urv">
+                                <rect key="frame" x="20" y="597" width="335" height="50"/>
+                                <color key="backgroundColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="MPo-Qv-kD2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="checkLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fFt-7r-ydF"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ZSx-zV-YJV" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.75" id="btR-Lb-iCh"/>
-                            <constraint firstItem="ZSx-zV-YJV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cpS-t7-WSx"/>
-                            <constraint firstItem="ZSx-zV-YJV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="neJ-N0-GvW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZSx-zV-YJV" secondAttribute="trailing" id="tLe-uo-QCK"/>
+                            <constraint firstItem="ZSx-zV-YJV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3KL-M7-2dF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="azM-fb-Urv" secondAttribute="trailing" constant="20" id="BUe-aC-y3b"/>
+                            <constraint firstItem="ZSx-zV-YJV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Dwm-yP-vUu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZSx-zV-YJV" secondAttribute="bottom" constant="90" id="MNm-I2-uPy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZSx-zV-YJV" secondAttribute="trailing" id="Uru-bd-cDU"/>
+                            <constraint firstItem="WRv-K6-u2r" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="VSB-c0-2DE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="azM-fb-Urv" secondAttribute="bottom" constant="20" id="VTs-yP-Ux6"/>
+                            <constraint firstItem="azM-fb-Urv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="so9-oV-vyl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WRv-K6-u2r" secondAttribute="trailing" constant="20" id="y5y-zd-AfF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WRv-K6-u2r" secondAttribute="bottom" constant="20" id="zG2-6A-hvv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="loginButton" destination="WRv-K6-u2r" id="r8s-jc-Tr1"/>
+                        <outlet property="logoutButton" destination="azM-fb-Urv" id="mPa-PE-lRa"/>
                         <outlet property="mapView" destination="ZSx-zV-YJV" id="IfW-CZ-zII"/>
                     </connections>
                 </viewController>
